NULL =
myincludedir = $(includedir)/upipe-framers
myinclude_HEADERS = \
	upipe_framers_common.h \
	upipe_h26x_common.h \
	upipe_auto_framer.h \
	upipe_h264_framer.h \
	upipe_h265_framer.h \
	upipe_mpgv_framer.h \
	upipe_mpga_framer.h \
	upipe_a52_framer.h \
	upipe_opus_framer.h \
	upipe_telx_framer.h \
	upipe_dvbsub_framer.h \
	upipe_s302_framer.h \
	upipe_s337_decaps.h \
	upipe_s337_framer.h \
	upipe_video_trim.h \
	uref_mpgv.h \
	uref_h264.h \
	uref_h264_flow.h \
	uref_h265.h \
	uref_h265_flow.h \
	uref_h26x.h \
	uref_h26x_flow.h \
	uref_mpga_flow.h \
	uref_mpgv_flow.h \
	uref_dvbsub_flow.h \
	$(NULL)
