myincludedir = $(includedir)/upipe-hbrmt
myinclude_HEADERS = \
                    upipe_pack10bit.h \
                    upipe_unpack10bit.h \
                    upipe_sdi_enc.h \
                    upipe_hbrmt_dec.h \
                    upipe_unpack_rfc4175.h \
                    upipe_sdi_dec.h \
                    $(NULL)
