myincludedir = $(includedir)/upipe-modules
myinclude_HEADERS = \
	upipe_proxy.h \
	upipe_dup.h \
	upipe_file_sink.h \
	upipe_file_source.h \
	upipe_genaux.h \
	upipe_multicat_sink.h \
	upipe_multicat_probe.h \
	upipe_probe_uref.h \
	upipe_null.h \
	upipe_skip.h \
	upipe_chunk_stream.h \
	upipe_queue_sink.h \
	upipe_queue_source.h \
	upipe_setattr.h \
	upipe_match_attr.h \
	upipe_setrap.h \
	upipe_udp_source.h \
	upipe_udp_sink.h \
	upipe_http_source.h \
    upipe_rtp_prepend.h
