myincludedir = $(includedir)/upipe-modules
myinclude_HEADERS = \
	upipe_transfer.h \
	upipe_dup.h \
	upipe_idem.h \
	upipe_file_sink.h \
	upipe_file_source.h \
	upipe_genaux.h \
	upipe_multicat_sink.h \
	upipe_multicat_probe.h \
	upipe_probe_uref.h \
	upipe_noclock.h \
	upipe_nodemux.h \
	upipe_delay.h \
	upipe_null.h \
	upipe_skip.h \
	upipe_aggregate.h \
	upipe_worker_linear.h \
	upipe_worker_sink.h \
	upipe_worker_source.h \
	upipe_htons.h \
	upipe_chunk_stream.h \
	upipe_queue_sink.h \
	upipe_queue_source.h \
	upipe_setflowdef.h \
	upipe_setattr.h \
	upipe_match_attr.h \
	upipe_setrap.h \
	upipe_play.h \
	upipe_trickplay.h \
	upipe_even.h \
	upipe_udp_source.h \
	upipe_udp_sink.h \
	upipe_http_source.h \
	upipe_rtp_decaps.h \
	upipe_rtp_prepend.h \
	upipe_rtp_source.h \
	upipe_blit.h \
	upipe_audio_split.h \
	upipe_videocont.h \
	upipe_audiocont.h \
	upipe_blank_source.h \
	upipe_sine_wave_source.h
