NULL =
myincludedir = $(includedir)/upipe-modules
myinclude_HEADERS = \
	upipe_transfer.h \
	upipe_dup.h \
	upipe_idem.h \
	upipe_file_sink.h \
	upipe_file_source.h \
	upipe_genaux.h \
	upipe_multicat_source.h \
	upipe_multicat_sink.h \
	upipe_multicat_probe.h \
	upipe_probe_uref.h \
	upipe_noclock.h \
	upipe_nodemux.h \
	upipe_dejitter.h \
	upipe_delay.h \
	upipe_null.h \
	upipe_skip.h \
	upipe_aggregate.h \
	upipe_convert_to_block.h \
	upipe_worker_linear.h \
	upipe_worker_sink.h \
	upipe_worker_source.h \
	upipe_worker.h \
	upipe_htons.h \
	upipe_chunk_stream.h \
	upipe_queue_sink.h \
	upipe_queue_source.h \
	upipe_setflowdef.h \
	upipe_setattr.h \
	upipe_match_attr.h \
	upipe_setrap.h \
	upipe_play.h \
	upipe_trickplay.h \
	upipe_even.h \
	upipe_udp_source.h \
	upipe_udp_sink.h \
	upipe_http_source.h \
	uref_http_flow.h \
	upipe_rtp_decaps.h \
	upipe_rtp_prepend.h \
	upipe_rtp_source.h \
	upipe_rtp_demux.h \
	upipe_rtp_h264.h \
	upipe_rtp_mpeg4.h \
	upipe_rtp_opus.h \
	upipe_rtcp.h \
	upipe_blit.h \
	uprobe_blit_prepare.h \
	upipe_crop.h \
	upipe_audio_split.h \
	upipe_videocont.h \
	upipe_audiocont.h \
	upipe_blank_source.h \
	upipe_sine_wave_source.h \
	upipe_stream_switcher.h \
	upipe_dump.h \
	uprobe_http_redirect.h \
	upipe_m3u_reader.h \
	upipe_auto_source.h \
	upipe_buffer.h \
	upipe_aes_decrypt.h \
	uref_aes_flow.h \
	upipe_rate_limit.h \
	upipe_time_limit.h \
	upipe_burst.h \
	upipe_sequential_source.h \
	upipe_segment_source.h \
	upipe_id3v2.h \
	upipe_rtp_reorder.h \
	upipe_subpic_schedule.h \
	upipe_s337_encaps.h \
	upipe_ntsc_prepend.h \
	upipe_rtp_pcm_unpack.h \
	upipe_rtp_pcm_pack.h \
	upipe_dtsdi.h \
	upipe_void_source.h \
	upipe_video_blank.h \
	upipe_audio_blank.h \
	upipe_grid.h \
	upipe_sync.h \
	upipe_block_to_sound.h \
	upipe_audio_copy.h \
	upipe_auto_inner.h \
	upipe_row_split.h \
	upipe_separate_fields.h \
	upipe_row_join.h \
	upipe_discard_blocking.h \
	$(NULL)
