pkginclude_HEADERS = \
	config.h \
	uatomic.h \
	ubase.h \
	ubuf.h \
	ubuf_block.h \
	ubuf_block_common.h \
	ubuf_block_mem.h \
	ubuf_block_stream.h \
	ubuf_pic.h \
	ubuf_pic_common.h \
	ubuf_pic_mem.h \
	uclock.h \
	uclock_std.h \
	udeal.h \
	udict.h \
	udict_dump.h \
	udict_inline.h \
	ueventfd.h \
	ufifo.h \
	ulifo.h \
	ulist.h \
	umem.h \
	umem_alloc.h \
	umem_pool.h \
	upipe.h \
	upipe_helper_output.h \
	upipe_helper_sink_delay.h \
	upipe_helper_source_read_size.h \
	upipe_helper_subpipe.h \
	upipe_helper_sync.h \
	upipe_helper_ubuf_mgr.h \
	upipe_helper_uclock.h \
	upipe_helper_upipe.h \
	upipe_helper_upump_mgr.h \
	upipe_helper_uref_mgr.h \
	upipe_helper_uref_stream.h \
	uprobe.h \
	uprobe_dejitter.h \
	uprobe_helper_adhoc.h \
	uprobe_helper_uprobe.h \
	uprobe_log.h \
	uprobe_prefix.h \
	uprobe_select_flows.h \
	uprobe_select_programs.h \
	uprobe_stdio.h \
	uprobe_upump_mgr.h \
	uprobe_uref_mgr.h \
	upump_common.h \
	upump.h \
	uqueue.h \
	uref_attr.h \
	uref_block_flow.h \
	uref_block.h \
	uref_clock.h \
	uref_dump.h \
	urefcount.h \
	uref_flow.h \
	uref.h \
	uref_pic_flow.h \
	uref_pic.h \
	uref_program_flow.h \
	uref_sound_flow.h \
	uref_std.h \
	uring.h
