lib_LTLIBRARIES = libupipe_ebur128.la


libupipe_ebur128_la_SOURCES = ebur128.c
libupipe_ebur128_la_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include
libupipe_ebur128_la_CFLAGS = -Wall
libupipe_ebur128_la_LDFLAGS = -no-undefined


pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libupipe_ebur128.pc
